// file: proto/gcommon/v1/queue/message_filter_config.proto
// version: 1.0.0
// guid: e63e4778-4555-4c0c-a835-7f83564e8513

edition = "2023";

package queue.v1;

import "queue/v1/content_filter.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queuepb";

message MessageFilterConfig {
  // Header-based filters
  map<string, string> header_filters = 1;

  // Content-based filters
  repeated ContentFilter content_filters = 2 [(buf.validate.field).repeated.min_items = 1];

  // Routing key patterns
  repeated string routing_key_patterns = 3 [(buf.validate.field).repeated.min_items = 1];

  // Message type filters
  repeated string message_types = 4 [(buf.validate.field).repeated.min_items = 1];

  // Custom filter expressions
  repeated string filter_expressions = 5 [(buf.validate.field).repeated.min_items = 1];

  // Exclude messages matching these criteria
  bool exclude_matching = 6;
}
